manifest/ingress-resource/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fastapi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx #Issuer name
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
      - fastapi.luketran.xyz
      secretName: letsencrypt-ingress-fastapi
  rules:
    - host: fastapi.luketran.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-ingress-service #name of service
                port:
                  number: 80
  ingressClassName: nginx
